<resources>
    <string name="app_name">Covid-19 Predictor</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_test">Test</string>
    <string name="title_video">Video</string>
    <string name="title_faq">Faq</string>
    <string name="profiletitle">Profile</string>



    <string-array name="states">
        <item>Select the State</item>
        <item>Andhra Pradhesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
        <item>----Union Territory----</item>
        <item>Andaman and Nicobar Island</item>
        <item>Chandigarh</item>
        <item>Dadra And Nagar Haveli And Daman And Diu</item>
        <item>Delhi</item>
        <item>Jammu and Kashmir</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Puducherry</item>


    </string-array>
    <string-array name="symptoms">
        <item>Select the symptom</item>
        <item>Breathing difficulty</item>
        <item>Headache</item>
        <item>Sore throat</item>
        <item>Diarrhea</item>
        <item>Cold and fever</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_setting_geo_fence">Map</string>
</resources>