<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.testing_covid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.testing_covid.ui.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.testing_covid.ui.test.testFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/navigation_Video"
        android:name="com.example.testing_covid.ui.Video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.testing_covid.ui.Faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_test" />


</navigation>